--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div id="container">
-            <section id="profile">
+            <section id="con1">
                 <ul class="wrap">
                     <li>
                         <h3>PROFILE</h3>
@@ -110,7 +110,7 @@
                     </li>
                 </ul>
             </section>
-            <section id="portfolio1">
+            <section id="con2">
                 <div class="por1">
                     <h2>HERA<br />웹 디자인</h2>
                     <h3>HERA web design</h3>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </section>
-            <section id="portfolio2">
+            <section id="con3">
                 <div class="por2">
                     <h2>HERA<br />웹 디자인</h2>
                     <h3>HERA web design</h3>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </section>
-            <section id="portfolio3">
+            <section id="con4">
                 <div class="por3">
                     <h2>HERA<br />웹 디자인</h2>
                     <h3>HERA web design</h3>
