--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
         <script src="js/jquery-3.7.1.min.js"></script>
         <script src="js/splitting.min.js"></script>
         <script src="js/index.js"></script>
@@ -32,7 +33,7 @@
     <body>
         <header>
             <h1>
-                <a href="index.html"><img src="img/logo.png" /></a>
+                <a href="index.html">Ej</a>
             </h1>
             <ul>
                 <li><a href="#" data-splitting>PROFILE</a></li>
@@ -54,7 +55,16 @@
         <div id="visual">
             <div class="txt1">
                 <h2>EUNJINOVATOR</h2>
-                <h4>새로운 아이디어, 새로운 방법을 실행하는 김은진 입니다</h4>
+                <h4>
+                    새로운 아이디어, <br />새로운 방법을 실행하는
+                    <span>김은진</span> 입니다
+                </h4>
+            </div>
+            <div class="scroll">
+                <p>SCROLL DOWN</p>
+                <div class="bar">
+                    <div class="circle"></div>
+                </div>
             </div>
         </div>
         <div id="container">
@@ -62,7 +72,7 @@
                 <ul class="wrap">
                     <li>
                         <h3>PROFILE</h3>
-                        <img src="img/me.png" />
+                        <img src="img/me.png.jpg" />
                         <div class="wave2">
                             <h3>
                                 안녕하세요.<br />
@@ -282,5 +292,9 @@
                 </div>
             </section>
         </div>
+
+        <script>
+            gsap.registerPlugin(ScrollTrigger);
+        </script>
     </body>
 </html>
